<resources>
    <string name="app_name">Ηλεκτρονική Μάθηση</string>
    <string name="title_activity_test">Τεστ</string>
    <string name="title_activity_score">Τελικό Αποτέλεσμα</string>
    <string name="title_activity_theory">Θεωρία</string>
    <string name="youtube">Βίντεο</string>

    <string name="placeholder">View</string>
    <string name="error">Invalid</string>

    <!-- Strings used for Shared Preferences-->
    <string name="sharedPreferencesKey">scores</string>
    <string name="addKey">add</string>
    <string name="difKey">dif</string>
    <string name="mulKey">mul</string>
    <string name="divKey">div</string>
    <string name="finalKey">final</string>

    <!-- String used for intents-->
    <string name="intentKey">class</string>
    <string name="testIntentKey">correct</string>

    <!-- String used in MainActivity.kt-->
    <string name="noGrade">Δεν υπάρχει βαθμός</string>
    <string name="reset">Επαναφορά</string>
    <string name="close">Κλείσιμο</string>

    <!-- String used in activity_main.xml-->
    <string name="action_history">Ιστορικό</string>
    <string name="theoryTitle">Θεωρία</string>
    <string name="testTitle">Τεστ</string>
    <string name="addTitle">Πρόσθεση</string>
    <string name="difTitle">Αφαίρεση</string>
    <string name="mulTitle">Πολλαπλασιασμός</string>
    <string name="divTitle">Διαίρεση</string>
    <string name="finalTitleText">Τελική Εξέταση</string>

    <!-- Strings used in history_layout.xml-->
    <string name="historyTitleText">Ιστορικό Τελευταίων Αποτελεσμάτων</string>

    <!--String used in TestActivity.kt-->
    <string name="addTestTitle">Βρες το σωστό άθροισμα</string>
    <string name="difTestTitle">Βρες τη σωστή διαφορά</string>
    <string name="mulTestTitle">Βρες το σωστό γινόμενο</string>
    <string name="divTestTitle">Βρες το σωστό πηλίκο</string>

    <!-- String used in content_score.xml and ScoreActivity.kt-->
    <string name="resultTitleTextView">Το Αποτέλεσμά σου είναι:</string>
    <string name="badResult">Δεν έχεις διαβάσει καθόλου. Διάβασε ξανά τη θεωρία</string>
    <string name="mediumResult">Έκανες καλή προσπάθεια. Διάβασε άλλη μια φορά τη θεωρία και πιστεύω θα τα καταφέρεις</string>
    <string name="goodResult">Μπράβο σου. Πολύ καλή προσπάθεια</string>

    <string name="tag">tag</string>
    <string name="API_Key">AIzaSyD1MJpEsiKx5Pxaef6DX9Pc-7zT3GLDvfw</string>

    <string name="YoutubeLink">http://www.youtube.com/watch?v=</string>
    <string name="ThumbnailLink">http://img.youtube.com/vi/</string>

</resources>